# nicobot

./: .gitignore  IDENTITY.md  MEMORY.md  README.md  SOUL.md  USER.md  run.sh  setup.sh  spoken_assistant.py  spoken_assistant_ptt.py
app/: main.js  package-lock.json  package.json  preload.js
app/renderer/: index.html  renderer.js  styles.css
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  config.rs  hermes.rs  main.rs
backend/src/routes/: chat.rs  config.rs  health.rs  mod.rs  proxy.rs  tts.rs
backend/src/services/: mod.rs  sqlite.rs
docs/: README.md  THIRD_PARTY_LICENSES.md  backend-packaging-plan.md
docs/architecture/: local-interfaces.md  system-overview.md
docs/product/: vision.md
docs/roadmap/: ai-infra-roadmap.md  alpha-definition.md  development-roadmap.md  umi-fork-roadmap.md
docs/ui/: agent-display-spec.md  floating-bar-spec.md
frontend/: Info.plist  Package.resolved  Package.swift
frontend/Sources/: APIClient.swift  APIKeyService.swift  AnalyticsManager.swift  AppState.swift  AuthService.swift  ChatProvider.swift  Logger.swift  Stubs.swift  TierManager.swift  UmiApp.swift  UsageLimitPopupView.swift  ViewModelContainer.swift
frontend/Tests/: ChatProviderRequestTests.swift
legacy/: requirements.txt  spoken_assistant.py  spoken_assistant_ptt.py
legacy/app/: main.js  package-lock.json  package.json  preload.js
scripts/: test_female_voices_extended.py  test_kokoro_english.py  test_kokoro_voices.py  test_parler_tts.py  test_piper_spanish.py  test_qwen3_clone.py  test_qwen3_mlx.py  test_qwen3_mlx_4bit.py  tts_benchmark.py
(+23 files in other folders)
