[package]
name = "umi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client (for LLM/TTS proxy)
reqwest = { version = "0.11", features = ["json", "stream"] }

# WebSocket proxy (future STT streaming)
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

# Local SQLite storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3.36", features = ["macros", "formatting", "local-offset"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
arc-swap = "1"
